--- a/retour_norvege.html
+++ b/retour_norvege.html
@@ -39,8 +39,8 @@
                     <a class="navbar-brand" href="index.html">
                         <img src="img/logo_2.png" alt="">
                     </a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="text-white lnr lnr-menu"></span>
                     </button>
 
@@ -110,21 +110,26 @@
                     <div class="col-md mt-sm">
                         <p>
                             <br>
-                            <br> Nous partons de Tromsø fin août et le choix de nos escales sera guidé par les conditions
+                            <br> Nous partons de Tromsø fin août et le choix de nos escales sera guidé par les
+                            conditions
                             météorologiques.
                             <br>
-                            <br>Le voyage dure trois semaines, ce qui nous permet de nous arrêter pour quelques escales,
+                            <br>Le voyage dure trois semaines, ce qui nous permet de nous arrêter pour quelques
+                            escales,
                             mais ce voyage s’adresse avant tout à des personnes qui veulent connaitre la vie en mer.
                             <br>
-                            <br>Nous pouvons privilégier les escales dans les îles Lofoten, les fjords norvégiens ou plus
+                            <br>Nous pouvons privilégier les escales dans les îles Lofoten, les fjords norvégiens ou
+                            plus
                             au sud : Strangford Lough, Dublin, les îles de Man ou Scilly.
                             <br>
                             <br>Il est possible aussi de traverser l’Ecosse par le canal calédonien.
                             <br>
-                            <br>Ce passage permet de continuer à faire route en cas de mauvais temps mais nous avons besoin
+                            <br>Ce passage permet de continuer à faire route en cas de mauvais temps mais nous avons
+                            besoin
                             d’au moins trois jours pour le traverser.
                             <br>
-                            <br> Avant l’arrivée à Arzal, nous aimons bien faire une escale à Belle Ile pour profiter de
+                            <br> Avant l’arrivée à Arzal, nous aimons bien faire une escale à Belle Ile pour profiter
+                            de
                             la côte de Bretagne Sud.
                     </div>
                 </div>
@@ -166,15 +171,16 @@
 
                                 <div class="d-flex flex-row">
 
-                                    <input class="form-control" name="EMAIL" placeholder="Entrez Email" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Entrez Email '"
-                                        required="" type="email">
+                                    <input class="form-control" name="EMAIL" placeholder="Entrez Email" onfocus="this.placeholder = ''"
+                                        onblur="this.placeholder = 'Entrez Email '" required="" type="email">
 
 
                                     <button class="click-btn btn btn-default">
                                         <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
                                     </button>
                                     <div style="position: absolute; left: -5000px;">
-                                        <input name="b_36c4fd991d266f23781ded980_aefe40901a" tabindex="-1" value="" type="text">
+                                        <input name="b_36c4fd991d266f23781ded980_aefe40901a" tabindex="-1" value=""
+                                            type="text">
                                     </div>
 
                                     <!-- <div class="col-lg-4 col-md-4">
@@ -190,7 +196,7 @@
                     <div class="single-footer-widget">
                         <h6>Suivez nous</h6>
                         <div class="footer-social d-flex align-items-center">
-                            <a href="#">
+                            <a href="https://www.facebook.com/Algol-Oceans-746017362081914/">
                                 <i class="fa fa-facebook"></i>
                             </a>
                         </div>
