--- a/route_nord_2019.html
+++ b/route_nord_2019.html
@@ -39,8 +39,8 @@
                     <a class="navbar-brand" href="index.html">
                         <img src="img/logo_2.png" alt="">
                     </a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="text-white lnr lnr-menu"></span>
                     </button>
 
@@ -114,15 +114,20 @@
                     <div class="col-md mt-sm">
                         <p>
                             <br>
-                            <br> Nous quittons Stornoway et faisons route vers la Norvège. Nous avons la possibilité de faire
+                            <br> Nous quittons Stornoway et faisons route vers la Norvège. Nous avons la possibilité de
+                            faire
                             escale aux Shetland, archipel de 23 000 habitants situés sur le 60ème parallèle. .
                             <br>
-                            <br>Suivant les conditions météorologiques, nous pouvons soit faire route directe vers les Lofoten
-                            qui regorgent de très jolis ports ou mouillages. Elles sont montagneuses et offrent des paysages
+                            <br>Suivant les conditions météorologiques, nous pouvons soit faire route directe vers les
+                            Lofoten
+                            qui regorgent de très jolis ports ou mouillages. Elles sont montagneuses et offrent des
+                            paysages
                             grandioses et des fjords encaissés.
                             <br>
-                            <br>Soit nous pouvons rejoindre plus rapidement les fjords de la côte norvégienne et profiter
-                            de leurs paysages bien connus. Nous arrivons à Tromsø, ville universitaire animée surtout en
+                            <br>Soit nous pouvons rejoindre plus rapidement les fjords de la côte norvégienne et
+                            profiter
+                            de leurs paysages bien connus. Nous arrivons à Tromsø, ville universitaire animée surtout
+                            en
                             cette période de l’année où la lumière est présente pendant vingt quatre heures par jour.
                     </div>
                 </div>
@@ -132,13 +137,16 @@
                     <div class="col-md">
                         <p class="text-right">
                             <br>
-                            <br>Cette croisière vous permettra de partager complètement la vie du bord: tenue des quarts,
+                            <br>Cette croisière vous permettra de partager complètement la vie du bord: tenue des
+                            quarts,
                             manoeuvres de voiles, tenue de la barre, navigation de nuit.
                             <br>
-                            <br>Vous pourrez enrichir vos connaissances en navigation, utilisation des instruments, lecture
+                            <br>Vous pourrez enrichir vos connaissances en navigation, utilisation des instruments,
+                            lecture
                             de cartes.
                             <br>
-                            <br>Ne sont pas inclus: les transferts aériens, les boissons alcoolisées, les entrées des musées,
+                            <br>Ne sont pas inclus: les transferts aériens, les boissons alcoolisées, les entrées des
+                            musées,
                             piscines, bains…
                         </p>
                     </div>
@@ -184,15 +192,16 @@
 
                                 <div class="d-flex flex-row">
 
-                                    <input class="form-control" name="EMAIL" placeholder="Entrez Email" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Entrez Email '"
-                                        required="" type="email">
+                                    <input class="form-control" name="EMAIL" placeholder="Entrez Email" onfocus="this.placeholder = ''"
+                                        onblur="this.placeholder = 'Entrez Email '" required="" type="email">
 
 
                                     <button class="click-btn btn btn-default">
                                         <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
                                     </button>
                                     <div style="position: absolute; left: -5000px;">
-                                        <input name="b_36c4fd991d266f23781ded980_aefe40901a" tabindex="-1" value="" type="text">
+                                        <input name="b_36c4fd991d266f23781ded980_aefe40901a" tabindex="-1" value=""
+                                            type="text">
                                     </div>
 
                                     <!-- <div class="col-lg-4 col-md-4">
@@ -208,7 +217,7 @@
                     <div class="single-footer-widget">
                         <h6>Suivez nous</h6>
                         <div class="footer-social d-flex align-items-center">
-                            <a href="#">
+                            <a href="https://www.facebook.com/Algol-Oceans-746017362081914/">
                                 <i class="fa fa-facebook"></i>
                             </a>
                         </div>
