--- a/route_whisky_2019.html
+++ b/route_whisky_2019.html
@@ -39,8 +39,8 @@
                     <a class="navbar-brand" href="index.html">
                         <img src="img/logo_2.png" alt="">
                     </a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="text-white lnr lnr-menu"></span>
                     </button>
 
@@ -113,14 +113,19 @@
                     </div>
                     <div class="col-md mt-sm-20">
                         <p>
-                            <br> Cette croisière est destinée à ceux qui ont envie de découvrir la navigation hauturière.
+                            <br> Cette croisière est destinée à ceux qui ont envie de découvrir la navigation
+                            hauturière.
                             <br>
-                            <br> Nous alternerons les navigations hauturières avec quart de nuit, le cabotage et les balades
-                            terre. Au départ d’Arzal, après avoir fait escale à Belle-Ile nous naviguerons le long de la
-                            côte sud bretonne jusqu’à l’ile d’Ouessant, puis nous enchainerons la traversée de la Manche
+                            <br> Nous alternerons les navigations hauturières avec quart de nuit, le cabotage et les
+                            balades
+                            terre. Au départ d’Arzal, après avoir fait escale à Belle-Ile nous naviguerons le long de
+                            la
+                            côte sud bretonne jusqu’à l’ile d’Ouessant, puis nous enchainerons la traversée de la
+                            Manche
                             suivie d’escales pour visiter les îles Scilly : St Mary’s, Tresco et son jardin tropical…
                             <br>
-                            <br> Ensuite nous traverserons la mer celtique pour aborder l’Irlande : Kinsale, Cork, Waterford,
+                            <br> Ensuite nous traverserons la mer celtique pour aborder l’Irlande : Kinsale, Cork,
+                            Waterford,
                             puis une navigation le long de la côte Est irlandaise nous amènera à Dublin.</p>
                     </div>
                 </div>
@@ -129,16 +134,23 @@
                 <div class="row">
                     <div class="col-md">
                         <p class="text-right">
-                            <br>REMARQUE : Comme tous les voyages en voilier, le programme dépend très fortement de la météo,
-                            tant pour les routes que pour les mouillages où nous cherchons des baies abritées. Suivant la
+                            <br>REMARQUE : Comme tous les voyages en voilier, le programme dépend très fortement de la
+                            météo,
+                            tant pour les routes que pour les mouillages où nous cherchons des baies abritées. Suivant
+                            la
                             direction d’où souffle le vent nous pouvons être amenés à modifier les mouillages.
                             <br>
-                            <br>De plus, nous avons l’habitude de faire évoluer les programmes en fonction des centres d’interêt
-                            des personnes présentes à bord. Les descriptifs aussi précis soient-ils ne sont que des indications
-                            ou exemples de ce qu’il est possible de faire. Ce voyage vous permettra de partager complètement
-                            la vie du bord : tenue des quarts, manoeuvres de voiles, tenue de la barre, navigation de nuit.
+                            <br>De plus, nous avons l’habitude de faire évoluer les programmes en fonction des centres
+                            d’interêt
+                            des personnes présentes à bord. Les descriptifs aussi précis soient-ils ne sont que des
+                            indications
+                            ou exemples de ce qu’il est possible de faire. Ce voyage vous permettra de partager
+                            complètement
+                            la vie du bord : tenue des quarts, manoeuvres de voiles, tenue de la barre, navigation de
+                            nuit.
                             <br>
-                            <br> Vous pourrez enrichir vos connaissances en navigation, utilisation des instruments, lecture
+                            <br> Vous pourrez enrichir vos connaissances en navigation, utilisation des instruments,
+                            lecture
                             de cartes.
                         </p>
                     </div>
@@ -183,15 +195,16 @@
 
                                 <div class="d-flex flex-row">
 
-                                    <input class="form-control" name="EMAIL" placeholder="Entrez Email" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Entrez Email '"
-                                        required="" type="email">
+                                    <input class="form-control" name="EMAIL" placeholder="Entrez Email" onfocus="this.placeholder = ''"
+                                        onblur="this.placeholder = 'Entrez Email '" required="" type="email">
 
 
                                     <button class="click-btn btn btn-default">
                                         <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
                                     </button>
                                     <div style="position: absolute; left: -5000px;">
-                                        <input name="b_36c4fd991d266f23781ded980_aefe40901a" tabindex="-1" value="" type="text">
+                                        <input name="b_36c4fd991d266f23781ded980_aefe40901a" tabindex="-1" value=""
+                                            type="text">
                                     </div>
 
                                     <!-- <div class="col-lg-4 col-md-4">
@@ -207,7 +220,7 @@
                     <div class="single-footer-widget">
                         <h6>Suivez nous</h6>
                         <div class="footer-social d-flex align-items-center">
-                            <a href="#">
+                            <a href="https://www.facebook.com/Algol-Oceans-746017362081914/">
                                 <i class="fa fa-facebook"></i>
                             </a>
                         </div>
