--- a/spitzberg.html
+++ b/spitzberg.html
@@ -39,8 +39,8 @@
                     <a class="navbar-brand" href="index.html">
                         <img src="img/logo_2.png" alt="">
                     </a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="text-white lnr lnr-menu"></span>
                     </button>
 
@@ -108,47 +108,65 @@
                     <div class="col-md">
                         <p class="text-left">
                             <ul>
-                                <li> Du lundi 27 mai au samedi 8 juin (13 jours) : Route vers le Spitzberg De Tromsø à Longyearbyen.
-                                    Embarquement : 26/05 à partir de 18h00, débarquement : 09/06 le matin Prix par personne
+                                <li> Du lundi 27 mai au samedi 8 juin (13 jours) : Route vers le Spitzberg De Tromsø à
+                                    Longyearbyen.
+                                    Embarquement : 26/05 à partir de 18h00, débarquement : 09/06 le matin Prix par
+                                    personne
                                     : 2 600 € + 455 € caisse de bord.
                                     <br>
-                                    <a href="spitzberg_1.html" class="text-uppercase genric-btn primary-border">Programme détaillé</a>
+                                    <a href="spitzberg_1.html" class="text-uppercase genric-btn primary-border">Programme
+                                        détaillé</a>
                                 </li>
                                 <br>
                                 <li>
-                                    Du mercredi 12 juin au dimanche 23 juin (13 jours) : Côte nord-ouest Spitzberg Longyearbyen - Longyearbyen. Embarquement
-                                    : 11/06 à partir de 18h00, débarquement : 24/06 le matin Prix par personne : 3 200 €
+                                    Du mercredi 12 juin au dimanche 23 juin (13 jours) : Côte nord-ouest Spitzberg
+                                    Longyearbyen - Longyearbyen. Embarquement
+                                    : 11/06 à partir de 18h00, débarquement : 24/06 le matin Prix par personne : 3 200
+                                    €
                                     + 420 € caisse de bord.
                                     <br>
-                                    <a href="spitzberg_2.html" class="text-uppercase genric-btn primary-border">Programme détaillé</a>
+                                    <a href="spitzberg_2.html" class="text-uppercase genric-btn primary-border">Programme
+                                        détaillé</a>
                                 </li>
                                 <br>
-                                <li> Du mercredi 26 juin au dimanche 7 juillet (13 jours) : Côte nord-ouest Spitzberg Longyearbyen
-                                    - Longyearbyen. Embarquement : 25/06 à partir de 18h00, débarquement : 08/07 le matin
+                                <li> Du mercredi 26 juin au dimanche 7 juillet (13 jours) : Côte nord-ouest Spitzberg
+                                    Longyearbyen
+                                    - Longyearbyen. Embarquement : 25/06 à partir de 18h00, débarquement : 08/07 le
+                                    matin
                                     Prix par personne : 3 020 € + 420 € caisse de bord.
                                     <br>
-                                    <a href="spitzberg_2.html" class="text-uppercase genric-btn primary-border">Programme détaillé</a>
+                                    <a href="spitzberg_2.html" class="text-uppercase genric-btn primary-border">Programme
+                                        détaillé</a>
                                 </li>
                                 <br>
-                                <li> Du mercredi 10 juillet au dimanche 21 juillet (13 jours) : Côte nord-ouest Spitzberg Longyearbyen
-                                    - Longyearbyen. Embarquement : 09/07 à partir de 18h00, débarquement : 22/07 le matin
+                                <li> Du mercredi 10 juillet au dimanche 21 juillet (13 jours) : Côte nord-ouest
+                                    Spitzberg Longyearbyen
+                                    - Longyearbyen. Embarquement : 09/07 à partir de 18h00, débarquement : 22/07 le
+                                    matin
                                     Prix par personne : 3 200 € + 420 € caisse de bord.
                                     <br>
-                                    <a href="spitzberg_2.html" class="text-uppercase genric-btn primary-border">Programme détaillé</a>
+                                    <a href="spitzberg_2.html" class="text-uppercase genric-btn primary-border">Programme
+                                        détaillé</a>
                                 </li>
                                 <br>
-                                <li> Du mercredi 24 juillet au dimanche 4 août (13 jours) : Côte nord-ouest Spitzberg Longyearbyen
-                                    - Longyearbyen. Embarquement : 23/07 à partir de 18h00, débarquement : 05/08 le matin
+                                <li> Du mercredi 24 juillet au dimanche 4 août (13 jours) : Côte nord-ouest Spitzberg
+                                    Longyearbyen
+                                    - Longyearbyen. Embarquement : 23/07 à partir de 18h00, débarquement : 05/08 le
+                                    matin
                                     Prix par personne : 3 200 € + 420 € caisse de bord.
                                     <br>
-                                    <a href="spitzberg_2.html" class="text-uppercase genric-btn primary-border">Programme détaillé</a>
+                                    <a href="spitzberg_2.html" class="text-uppercase genric-btn primary-border">Programme
+                                        détaillé</a>
                                 </li>
                                 <br>
-                                <li> Du mercredi 7 août au mercredi 28 août (22 jours) : retour Norvège par le nord et l’est du
-                                    Spitzberg. De Longyearbyen à Tromsø. Embarquement : 06/08 à partir de 18h00, débarquement
+                                <li> Du mercredi 7 août au mercredi 28 août (22 jours) : retour Norvège par le nord et
+                                    l’est du
+                                    Spitzberg. De Longyearbyen à Tromsø. Embarquement : 06/08 à partir de 18h00,
+                                    débarquement
                                     : 29/08 le matin Prix par personne : 4 200 € + 660 € caisse de bord.
                                     <br>
-                                    <a href="spitzberg_3.html" class="text-uppercase genric-btn primary-border">Programme détaillé</a>
+                                    <a href="spitzberg_3.html" class="text-uppercase genric-btn primary-border">Programme
+                                        détaillé</a>
                                 </li>
                             </ul>
                         </p>
@@ -164,16 +182,21 @@
                 </div>
             </div>
             <div class="section-top-border">
-                La croisière 1 et la croisière 6 (ci-dessus) comportent une navigation hauturière de 3 jours entre la Norvège et le Spitzberg
+                La croisière 1 et la croisière 6 (ci-dessus) comportent une navigation hauturière de 3 jours entre la
+                Norvège et le Spitzberg
                 ou retour.
                 <br>
-                <br> REMARQUE: En raison des conditions météorologiques en régions polaires, le programme peut être modifié.
+                <br> REMARQUE: En raison des conditions météorologiques en régions polaires, le programme peut être
+                modifié.
                 <br>
-                <br>Il peut aussi être modifié en fonction de la présence de la glace. La prestation inclut l’hébergement sur
-                le voilier, la nourriture prise à bord. Ne sont pas inclus: les transferts aériens et autres pour rejoindre
+                <br>Il peut aussi être modifié en fonction de la présence de la glace. La prestation inclut
+                l’hébergement sur
+                le voilier, la nourriture prise à bord. Ne sont pas inclus: les transferts aériens et autres pour
+                rejoindre
                 le bateau, les boissons alcoolisées, les entrées des musées, les douches à terre.
                 <br>
-                <br>Voir nos conditions générales pour plus de détails. A votre demande, nous vous enverrons un dossier très
+                <br>Voir nos conditions générales pour plus de détails. A votre demande, nous vous enverrons un dossier
+                très
                 complet décrivant précisément les prestations fournies et le voyage.
             </div>
             <div class="section-top-border">
@@ -220,15 +243,16 @@
 
                                 <div class="d-flex flex-row">
 
-                                    <input class="form-control" name="EMAIL" placeholder="Entrez Email" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Entrez Email '"
-                                        required="" type="email">
+                                    <input class="form-control" name="EMAIL" placeholder="Entrez Email" onfocus="this.placeholder = ''"
+                                        onblur="this.placeholder = 'Entrez Email '" required="" type="email">
 
 
                                     <button class="click-btn btn btn-default">
                                         <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
                                     </button>
                                     <div style="position: absolute; left: -5000px;">
-                                        <input name="b_36c4fd991d266f23781ded980_aefe40901a" tabindex="-1" value="" type="text">
+                                        <input name="b_36c4fd991d266f23781ded980_aefe40901a" tabindex="-1" value=""
+                                            type="text">
                                     </div>
 
                                     <!-- <div class="col-lg-4 col-md-4">
@@ -244,7 +268,7 @@
                     <div class="single-footer-widget">
                         <h6>Suivez nous</h6>
                         <div class="footer-social d-flex align-items-center">
-                            <a href="#">
+                            <a href="https://www.facebook.com/Algol-Oceans-746017362081914/">
                                 <i class="fa fa-facebook"></i>
                             </a>
                         </div>
