--- a/spitzberg_1.html
+++ b/spitzberg_1.html
@@ -39,8 +39,8 @@
                     <a class="navbar-brand" href="index.html">
                         <img src="img/logo_2.png" alt="">
                     </a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="text-white lnr lnr-menu"></span>
                     </button>
 
@@ -111,30 +111,44 @@
                     </div>
                     <div class="col-md mt-sm">
                         <p>
-                            Jour 0 : arrivée à Tromsø, embarquement vers 18h00. Une bonne occasion pour s'imprégner de l'ambiance des week-ends à Tromsø,
+                            Jour 0 : arrivée à Tromsø, embarquement vers 18h00. Une bonne occasion pour s'imprégner de
+                            l'ambiance des week-ends à Tromsø,
                             la cité universitaire la plus boréale de la planète. Soirée à terre.
                             <br>
-                            <br> Jour 1 : Navigation dans les fjords au pied des montagnes (Alpes de Lyngen) au nord de Tromsø,
+                            <br> Jour 1 : Navigation dans les fjords au pied des montagnes (Alpes de Lyngen) au nord de
+                            Tromsø,
                             prise de contact avec le bateau.
 
                             <br>
-                            <br> Jour 2 à 5 : Traversée de Norvège au Spitzberg. La navigation prend un peu moins de quatre jours
-                            avec un arrêt possible à Björnøya ou île de l’ours. Arrivée au Spitzberg et mouillage dans le
-                            Hornsund, un des plus beaux fjords du Spitzberg. A cette époque de l’année, il n’est souvent
-                            pas possible de naviguer jusqu’ au fond du fjord à cause de la présence de la glace et nous mouillons
+                            <br> Jour 2 à 5 : Traversée de Norvège au Spitzberg. La navigation prend un peu moins de
+                            quatre jours
+                            avec un arrêt possible à Björnøya ou île de l’ours. Arrivée au Spitzberg et mouillage dans
+                            le
+                            Hornsund, un des plus beaux fjords du Spitzberg. A cette époque de l’année, il n’est
+                            souvent
+                            pas possible de naviguer jusqu’ au fond du fjord à cause de la présence de la glace et nous
+                            mouillons
                             à Gashamma.
 
                             <br>
-                            <br> Jour 6 à 11 : Nous longeons la côte et faisons escale dans le Bellsund, mouillage de Fridjovhamna,
-                            aussi dans le Van Keulen Fjorden près du glacier Recherchebreen. En pénétrant dans l’Isfjord,
-                            nous avons le choix des mouillages : Trygghamna et le rocher Alkhornet, magnifique falaise aux
-                            oiseaux; Ymerbukta et le glacier Esmarkbreen; Templetfjorden et l’étonnante falaise Templet.
+                            <br> Jour 6 à 11 : Nous longeons la côte et faisons escale dans le Bellsund, mouillage de
+                            Fridjovhamna,
+                            aussi dans le Van Keulen Fjorden près du glacier Recherchebreen. En pénétrant dans
+                            l’Isfjord,
+                            nous avons le choix des mouillages : Trygghamna et le rocher Alkhornet, magnifique falaise
+                            aux
+                            oiseaux; Ymerbukta et le glacier Esmarkbreen; Templetfjorden et l’étonnante falaise
+                            Templet.
 
                             <br>
-                            <br> Jour 12 : Arrivée à Longyearbyen, visite de la ville et soirée à terre. Longyearbyen est une
-                            ville animée bien que très septentrionale, musée polaire intéressant, université, piscine, boutiques,
-                            restaurants, les centres d’intérêts ne manquent pas. Les anciens chemins aériens des wagonnets
-                            des mines pour acheminer le charbon jusqu’au port modèlent le paysage et rappellent le passé
+                            <br> Jour 12 : Arrivée à Longyearbyen, visite de la ville et soirée à terre. Longyearbyen
+                            est une
+                            ville animée bien que très septentrionale, musée polaire intéressant, université, piscine,
+                            boutiques,
+                            restaurants, les centres d’intérêts ne manquent pas. Les anciens chemins aériens des
+                            wagonnets
+                            des mines pour acheminer le charbon jusqu’au port modèlent le paysage et rappellent le
+                            passé
                             minier de Longyearbyen.
                             <br>
                             <br> Jour 12+1 : débarquement, départ pour l’aéroport.
@@ -145,15 +159,21 @@
                 <div class="row">
                     <div class="col-md">
                         <p class="text-right">
-                            Attention : Nous naviguons en arctique entre le 69ème et le 79ème parallèle. Plus que partout ailleurs, notre programme est
-                            tributaire des conditions météorologiques et des conditions de glace. Nous arrivons au Spitzberg
-                            en fin d’hiver et la présence de la glace peut nous gêner pour entrer dans certains fjords. De
-                            même, nous devons respecter la nature pendant nos randonnées à terre en évitant de marcher sur
-                            la flore, mousses, lichens. Enfin, la présence des ours polaires impose des mesures de sécurité
+                            Attention : Nous naviguons en arctique entre le 69ème et le 79ème parallèle. Plus que
+                            partout ailleurs, notre programme est
+                            tributaire des conditions météorologiques et des conditions de glace. Nous arrivons au
+                            Spitzberg
+                            en fin d’hiver et la présence de la glace peut nous gêner pour entrer dans certains fjords.
+                            De
+                            même, nous devons respecter la nature pendant nos randonnées à terre en évitant de marcher
+                            sur
+                            la flore, mousses, lichens. Enfin, la présence des ours polaires impose des mesures de
+                            sécurité
                             importantes dès que nous sommes à terre.
 
                             <br>
-                            <br> Ne sont pas inclus: les transferts aériens, les boissons alcoolisées, les entrées des musées,
+                            <br> Ne sont pas inclus: les transferts aériens, les boissons alcoolisées, les entrées des
+                            musées,
                             piscines, bains…
                         </p>
                     </div>
@@ -198,15 +218,16 @@
 
                                 <div class="d-flex flex-row">
 
-                                    <input class="form-control" name="EMAIL" placeholder="Entrez Email" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Entrez Email '"
-                                        required="" type="email">
+                                    <input class="form-control" name="EMAIL" placeholder="Entrez Email" onfocus="this.placeholder = ''"
+                                        onblur="this.placeholder = 'Entrez Email '" required="" type="email">
 
 
                                     <button class="click-btn btn btn-default">
                                         <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
                                     </button>
                                     <div style="position: absolute; left: -5000px;">
-                                        <input name="b_36c4fd991d266f23781ded980_aefe40901a" tabindex="-1" value="" type="text">
+                                        <input name="b_36c4fd991d266f23781ded980_aefe40901a" tabindex="-1" value=""
+                                            type="text">
                                     </div>
 
                                     <!-- <div class="col-lg-4 col-md-4">
@@ -222,7 +243,7 @@
                     <div class="single-footer-widget">
                         <h6>Suivez nous</h6>
                         <div class="footer-social d-flex align-items-center">
-                            <a href="#">
+                            <a href="https://www.facebook.com/Algol-Oceans-746017362081914/">
                                 <i class="fa fa-facebook"></i>
                             </a>
                         </div>
