--- a/spitzberg_2.html
+++ b/spitzberg_2.html
@@ -39,8 +39,8 @@
                     <a class="navbar-brand" href="index.html">
                         <img src="img/logo_2.png" alt="">
                     </a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="text-white lnr lnr-menu"></span>
                     </button>
 
@@ -111,29 +111,49 @@
                             Jour 0 : arrivée à Longyearbyen, embarquement et nuit à bord.
 
                             <br>
-                            <br> Jour 1 : Le matin, visite de Longyearbyen, départ en début d’après-midi pour mouiller à Trygghamna.
-                            Le soir ou le lendemain matin : balade au pied d’ Alkhornet, grand rocher aux oiseaux, pour observer
+                            <br> Jour 1 : Le matin, visite de Longyearbyen, départ en début d’après-midi pour mouiller
+                            à Trygghamna.
+                            Le soir ou le lendemain matin : balade au pied d’ Alkhornet, grand rocher aux oiseaux, pour
+                            observer
                             les rennes et les renards.
 
                             <br>
-                            <br> Jour 2 à 11 : Nous naviguons vers le nord dans le Forlandsundet entre Prins Karl Forland et
-                            le Spitzberg, arrêt à Poolepynten pour observer la colonie de morses. Nous entrons ensuite dans
-                            la Baie du Roi pour admirer le grand glacier des Trois Couronnes, escale à Ny Alesund où des
-                            équipes de scientifiques de différents pays travaillent. Le Lilliehöökfjörden nous mène au glacier
-                            Lilliehöökbreen et sa façade de glace longue de huit kilomètres. Nous mouillons dans la Baie
-                            de la Madeleine, petit et superbe fjord dans lequel débouche le glacier Waggonwaybreen puis nous
-                            poursuivons vers le 80ème parallèle par Smeerenburgfjörden où nous avons des chances d’apercevoir
-                            des ours polaires. A cette latitude, nous nous approchons de la banquise. Nous mouillons tous
-                            les soirs à l’exception d’une nuit ou deux pour une étape de navigation d’une vingtaine d’heures.
-                            A cette époque de l’année, le jour est permanent, le terme de nuit n’a donc pas la même signification
-                            que sous nos latitudes. Le Spitzberg recèle beaucoup de sites et nous ne pouvons pas tout voir
-                            en douze jours. Rien que dans l’Isfjord, De nombreux mouillages s’offrent à nous dont l’étonnante
-                            falaise de Templet. le programme se fait en fonction des conditions météorologiques et de la
-                            glace ainsi que des envies des membres de l’équipage. Ce voyage fournit des occasions de randonnées
-                            intéressantes : Alkhornet, presqu’île de Gravneset dans la baie de la Madeleine, l'ancienne mine
-                            de marbre de Ny London, des sites historiques, la géologie, la glaciologie. Celles-ci sont aussi
-                            l’occasion d’observer la faune riche : renards, rennes, morses, oiseaux migrateurs et arctiques.
-                            Du bateau nous pouvons observer : phoques, belugas, baleines, ours polaires. La flore arctique
+                            <br> Jour 2 à 11 : Nous naviguons vers le nord dans le Forlandsundet entre Prins Karl
+                            Forland et
+                            le Spitzberg, arrêt à Poolepynten pour observer la colonie de morses. Nous entrons ensuite
+                            dans
+                            la Baie du Roi pour admirer le grand glacier des Trois Couronnes, escale à Ny Alesund où
+                            des
+                            équipes de scientifiques de différents pays travaillent. Le Lilliehöökfjörden nous mène au
+                            glacier
+                            Lilliehöökbreen et sa façade de glace longue de huit kilomètres. Nous mouillons dans la
+                            Baie
+                            de la Madeleine, petit et superbe fjord dans lequel débouche le glacier Waggonwaybreen puis
+                            nous
+                            poursuivons vers le 80ème parallèle par Smeerenburgfjörden où nous avons des chances
+                            d’apercevoir
+                            des ours polaires. A cette latitude, nous nous approchons de la banquise. Nous mouillons
+                            tous
+                            les soirs à l’exception d’une nuit ou deux pour une étape de navigation d’une vingtaine
+                            d’heures.
+                            A cette époque de l’année, le jour est permanent, le terme de nuit n’a donc pas la même
+                            signification
+                            que sous nos latitudes. Le Spitzberg recèle beaucoup de sites et nous ne pouvons pas tout
+                            voir
+                            en douze jours. Rien que dans l’Isfjord, De nombreux mouillages s’offrent à nous dont
+                            l’étonnante
+                            falaise de Templet. le programme se fait en fonction des conditions météorologiques et de
+                            la
+                            glace ainsi que des envies des membres de l’équipage. Ce voyage fournit des occasions de
+                            randonnées
+                            intéressantes : Alkhornet, presqu’île de Gravneset dans la baie de la Madeleine, l'ancienne
+                            mine
+                            de marbre de Ny London, des sites historiques, la géologie, la glaciologie. Celles-ci sont
+                            aussi
+                            l’occasion d’observer la faune riche : renards, rennes, morses, oiseaux migrateurs et
+                            arctiques.
+                            Du bateau nous pouvons observer : phoques, belugas, baleines, ours polaires. La flore
+                            arctique
                             est très présente : mousses, lichens, saules nains, linaigrette, saxifrage.
                             <br>
                             <br> Jour 12 : Nous retournons dans l’Isfjörd à Longyearbyen, terme de notre voyage.
@@ -154,14 +174,19 @@
                         </div>
                         <div class="col-md mt-sm">
                             <p class="text-right">
-                                Nous naviguons en arctique entre le 78ème et le 80ème parallèle. Plus que partout ailleurs, notre programme est tributaire
-                                des conditions météorologiques et des conditions de glace. De même, nous devons respecter
-                                la nature pendant nos randonnées à terre en évitant de marcher sur la flore, mousses, lichens
-                                … Enfin, la présence des ours polaires impose des mesures de sécurité importantes dès que
+                                Nous naviguons en arctique entre le 78ème et le 80ème parallèle. Plus que partout
+                                ailleurs, notre programme est tributaire
+                                des conditions météorologiques et des conditions de glace. De même, nous devons
+                                respecter
+                                la nature pendant nos randonnées à terre en évitant de marcher sur la flore, mousses,
+                                lichens
+                                … Enfin, la présence des ours polaires impose des mesures de sécurité importantes dès
+                                que
                                 nous sommes à terre.
 
                                 <br>
-                                <br> Ne sont pas inclus: les transferts aériens, les boissons alcoolisées, les entrées des musées,
+                                <br> Ne sont pas inclus: les transferts aériens, les boissons alcoolisées, les entrées
+                                des musées,
                                 piscines, bains…
                         </div>
                     </div>
@@ -203,15 +228,16 @@
 
                                 <div class="d-flex flex-row">
 
-                                    <input class="form-control" name="EMAIL" placeholder="Entrez Email" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Entrez Email '"
-                                        required="" type="email">
+                                    <input class="form-control" name="EMAIL" placeholder="Entrez Email" onfocus="this.placeholder = ''"
+                                        onblur="this.placeholder = 'Entrez Email '" required="" type="email">
 
 
                                     <button class="click-btn btn btn-default">
                                         <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
                                     </button>
                                     <div style="position: absolute; left: -5000px;">
-                                        <input name="b_36c4fd991d266f23781ded980_aefe40901a" tabindex="-1" value="" type="text">
+                                        <input name="b_36c4fd991d266f23781ded980_aefe40901a" tabindex="-1" value=""
+                                            type="text">
                                     </div>
 
                                     <!-- <div class="col-lg-4 col-md-4">
@@ -227,7 +253,7 @@
                     <div class="single-footer-widget">
                         <h6>Suivez nous</h6>
                         <div class="footer-social d-flex align-items-center">
-                            <a href="#">
+                            <a href="https://www.facebook.com/Algol-Oceans-746017362081914/">
                                 <i class="fa fa-facebook"></i>
                             </a>
                         </div>
