--- a/spitzberg_3.html
+++ b/spitzberg_3.html
@@ -39,8 +39,8 @@
                     <a class="navbar-brand" href="index.html">
                         <img src="img/logo_2.png" alt="">
                     </a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="text-white lnr lnr-menu"></span>
                     </button>
 
@@ -110,39 +110,58 @@
                     </div>
                     <div class="col-md mt-sm">
                         <p>
-                            Ce voyage s’adresse à des personnes ayant déjà une pratique de la navigation. Le but est de faire le tour du Spitzberg pour
-                            découvrir les côtes Nord et Est où très peu de bateaux naviguent, ce qui rend ce voyage exceptionnel.
+                            Ce voyage s’adresse à des personnes ayant déjà une pratique de la navigation. Le but est de
+                            faire le tour du Spitzberg pour
+                            découvrir les côtes Nord et Est où très peu de bateaux naviguent, ce qui rend ce voyage
+                            exceptionnel.
                             Ce programme est évidemment tributaire des conditions de glace.
                             <br>
                             <br> Jour 0 : Arrivée à Longyearbyen, embarquement et nuit à bord.
 
                             <br>
-                            <br> Jour 1 : Le matin, visite de Longyearbyen, départ en début d’après-midi pour mouiller à Trygghamna.
-                            Le soir ou le lendemain matin : balade au pied d’ Alkhornet, grand rocher aux oiseaux, pour rencontrer
+                            <br> Jour 1 : Le matin, visite de Longyearbyen, départ en début d’après-midi pour mouiller
+                            à Trygghamna.
+                            Le soir ou le lendemain matin : balade au pied d’ Alkhornet, grand rocher aux oiseaux, pour
+                            rencontrer
                             les rennes et les renards.
 
                             <br>
-                            <br> Jour 2 à 13 : Nous naviguons vers le nord dans le Forlandsundet entre Prins Karl Forland et
-                            le Spitzberg, arrêt à Poolepynten pour observer la colonie de morses. Nous entrons ensuite dans
-                            la Baie du Roi pour admirer le grand glacier des Trois Couronnes, escale à Ny Alesund, où des
-                            équipes de scientifiques de différents pays travaillent. Le Lilliehöökfjörden nous mène au glacier
-                            Lilliehöökbreen et sa façade de glace longue de huit kilomètres. Nous mouillons dans la Baie
-                            de la Madeleine, petit et superbe fjord dans lequel débouche le glacier Waggonwaybreen puis nous
-                            poursuivons vers la côte nord par Smeerenburgfjörden , vers les fjords Raudfjørden, Woodfjørden,
-                            l’île Moffen et sa colonie de morses. Les morses sont présents à Poolepynten jusqu’au 15 juillet,
-                            puis ils migrent vers Moffen. Nous embouquons le Hinlopenstreetet, entre le Spitzberg et le Nordaustlandet,
-                            pour longer la côte Est vers le sud et les îles Barents et Edgeøya. Plusieurs mouillages sont
-                            possibles sur cette côte dont la baie d’Inglefield où Vagabond avait hiverné pendant cinq ans
-                            participant au programme Damoclès. L’observation d’ours polaires est quasi certaine dans cette
+                            <br> Jour 2 à 13 : Nous naviguons vers le nord dans le Forlandsundet entre Prins Karl
+                            Forland et
+                            le Spitzberg, arrêt à Poolepynten pour observer la colonie de morses. Nous entrons ensuite
+                            dans
+                            la Baie du Roi pour admirer le grand glacier des Trois Couronnes, escale à Ny Alesund, où
+                            des
+                            équipes de scientifiques de différents pays travaillent. Le Lilliehöökfjörden nous mène au
+                            glacier
+                            Lilliehöökbreen et sa façade de glace longue de huit kilomètres. Nous mouillons dans la
+                            Baie
+                            de la Madeleine, petit et superbe fjord dans lequel débouche le glacier Waggonwaybreen puis
+                            nous
+                            poursuivons vers la côte nord par Smeerenburgfjörden , vers les fjords Raudfjørden,
+                            Woodfjørden,
+                            l’île Moffen et sa colonie de morses. Les morses sont présents à Poolepynten jusqu’au 15
+                            juillet,
+                            puis ils migrent vers Moffen. Nous embouquons le Hinlopenstreetet, entre le Spitzberg et le
+                            Nordaustlandet,
+                            pour longer la côte Est vers le sud et les îles Barents et Edgeøya. Plusieurs mouillages
+                            sont
+                            possibles sur cette côte dont la baie d’Inglefield où Vagabond avait hiverné pendant cinq
+                            ans
+                            participant au programme Damoclès. L’observation d’ours polaires est quasi certaine dans
+                            cette
                             région.
 
                             <br>
-                            <br> Jour 14 à 18 : Traversée du sud du Spitzberg vers la Norvège. La navigation prend un peu moins
-                            de quatre jours avec un arrêt possible à Björnøya ou île de l’ours. Arrivée et mouillage dans
+                            <br> Jour 14 à 18 : Traversée du sud du Spitzberg vers la Norvège. La navigation prend un
+                            peu moins
+                            de quatre jours avec un arrêt possible à Björnøya ou île de l’ours. Arrivée et mouillage
+                            dans
                             les fjords au pied des montagnes du nord de Tromsø (Alpes de Lyngen).
 
                             <br>
-                            <br> Jour 19 : Navigation dans les fjords et arrivée à Tromsø, découverte de la cité universitaire
+                            <br> Jour 19 : Navigation dans les fjords et arrivée à Tromsø, découverte de la cité
+                            universitaire
                             la plus boréale de la planète. Soirée à terre.
 
                             <br>
@@ -154,14 +173,19 @@
                 <div class="row">
                     <div class="col-md">
                         <p class="text-right">
-                            Nous naviguons en arctique entre le 69ème et le 81ème parallèle. Plus que partout ailleurs, notre programme est tributaire
-                            des conditions météorologiques et des conditions de glace. De même, nous devons respecter la
-                            nature pendant nos randonnées à terre en évitant de marcher sur la flore, mousses, lichens. Enfin,
-                            la présence des ours polaires impose des mesures de sécurité importantes dès que nous sommes
+                            Nous naviguons en arctique entre le 69ème et le 81ème parallèle. Plus que partout ailleurs,
+                            notre programme est tributaire
+                            des conditions météorologiques et des conditions de glace. De même, nous devons respecter
+                            la
+                            nature pendant nos randonnées à terre en évitant de marcher sur la flore, mousses, lichens.
+                            Enfin,
+                            la présence des ours polaires impose des mesures de sécurité importantes dès que nous
+                            sommes
                             à terre.
 
                             <br>
-                            <br> Ne sont pas inclus: les transferts aériens, les boissons alcoolisées, les entrées des musées,
+                            <br> Ne sont pas inclus: les transferts aériens, les boissons alcoolisées, les entrées des
+                            musées,
                             piscines, bains…
 
 
@@ -208,15 +232,16 @@
 
                                 <div class="d-flex flex-row">
 
-                                    <input class="form-control" name="EMAIL" placeholder="Entrez Email" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Entrez Email '"
-                                        required="" type="email">
+                                    <input class="form-control" name="EMAIL" placeholder="Entrez Email" onfocus="this.placeholder = ''"
+                                        onblur="this.placeholder = 'Entrez Email '" required="" type="email">
 
 
                                     <button class="click-btn btn btn-default">
                                         <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
                                     </button>
                                     <div style="position: absolute; left: -5000px;">
-                                        <input name="b_36c4fd991d266f23781ded980_aefe40901a" tabindex="-1" value="" type="text">
+                                        <input name="b_36c4fd991d266f23781ded980_aefe40901a" tabindex="-1" value=""
+                                            type="text">
                                     </div>
 
                                     <!-- <div class="col-lg-4 col-md-4">
@@ -232,7 +257,7 @@
                     <div class="single-footer-widget">
                         <h6>Suivez nous</h6>
                         <div class="footer-social d-flex align-items-center">
-                            <a href="#">
+                            <a href="https://www.facebook.com/Algol-Oceans-746017362081914/">
                                 <i class="fa fa-facebook"></i>
                             </a>
                         </div>
